<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/menu_pedidos"
            android:icon="@drawable/ic_orders"
            android:title="@string/menu_orders"/>
       
        <item
            android:id="@+id/menu_repuestos"
            android:icon="@drawable/ic_baseline_settings_20px"
            android:title="@string/repuestos" />

        <item
            android:id="@+id/menu_ventas"
            android:icon="@drawable/ic_baseline_trending_up_24px"
            android:title="@string/ventas" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"/>
    </group>
</menu>