<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbarStyle="outsideOverlay"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".RegistrarActivity">

        <include layout="@layout/actionbar_toolbar" />




        <android.support.design.widget.TextInputLayout
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/lblNombre"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/lblNombre"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/txtApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/lblApellido"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/lblApellido"
            android:inputType="textPersonName" />



        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/lblRol"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:text="@string/rol" />
        <Spinner
            android:id="@+id/spnRol"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="0dp" />


        <TextView
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:text="@string/tipodocumento"
        android:textSize="14dp" />

        <Spinner
        android:id="@+id/spnTipoDoc"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="0dp" />

        <android.support.design.widget.TextInputLayout
        android:id="@+id/txtNumeroDocumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/lblNumeroDocumento"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/lblnumeroDocumento" />
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/lblCelular"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/lblCelular"
                android:inputType="text|number"
                android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/txtDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/lblDireccion"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/lblDireccion"
            android:inputType="textPostalAddress" />

    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/lblCorreo"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/lblCorreo"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/txtContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <EditText
                android:id="@+id/lblpassword"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/lblContraseña"
                android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/txtConfContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <EditText
                android:id="@+id/lblConfpassword"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/confirmarContraseña"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terminos"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="normal" />


        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"

            android:text="@string/registrar"
            android:textColor="@android:color/white"
            android:textSize="14sp" />



    </LinearLayout>
</ScrollView>
