<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".registar_productos"
    tools:showIn="@layout/activity_registar_productos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
        android:id="@+id/txtNombre_producto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/Nombre_Producto"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/lblNombre"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtPrecio__registrar_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Precio_Producto"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/precio"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtReferencia_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Referencia_Producto_registrar"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/referencia_producto"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/btnRegistrar_producto"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"

            android:text="@string/registrar"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

   </LinearLayout>

</android.support.v4.widget.NestedScrollView>