<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_horizontal_login"
            android:paddingRight="@dimen/padding_horizontal_login">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_store"
                    android:scaleType="fitCenter"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtMarcaWp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextWhite">
                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/login_label_email"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextWhite">
                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:inputType="textPassword"
                    android:hint="@string/login_label_password" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:text="@string/login_label_button"
                    android:textSize="@dimen/button_text_size"
                    android:theme="@style/RaisedButtonDark"/>


                <Button
                    android:id="@+id/btnRegistrese"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:text="@string/sigin_label_button"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>